# cec-omp

./: CMakeLists.txt  README.md
lib/open.mp-sdk/: open.mp-sdk
src/: CMakeLists.txt  main.cpp  main.hpp  natives.cpp  natives.h  plugin.def
